test/compile_errors/stage1/obj/normal_string_with_newline.zig
const foo = "a
b";

// normal string with newline
//
// tmp.zig:1:13: error: expected expression, found 'invalid bytes'
// tmp.zig:1:15: note: invalid byte: '\n'
